--- a/src/main/resources/templates/admin/fragments/header.html
+++ b/src/main/resources/templates/admin/fragments/header.html
@@ -4,7 +4,7 @@
 
 	<div class="d-flex align-items-center justify-content-between">
 		<a th:href="@{/dashboard}" class="logo d-flex align-items-center">
-			<img src="assets/img/logo.png" alt="">
+			<img src="img/logo.png" alt="">
 			<span class="d-none d-lg-block">NiceAdmin</span>
 		</a>
 		<i class="bi bi-list toggle-sidebar-btn"></i>
@@ -66,7 +66,7 @@
 			<li class="nav-item dropdown pe-3">
 
 				<a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-					<img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
+					<img src="img/profile-img.jpg" alt="Profile" class="rounded-circle">
 					<span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
 				</a><!-- End Profile Iamge Icon -->
 
